// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DragImage test suite renders component with a map 1`] = `
<div
  className="dragImage-active"
  id="dragImage"
>
  <div>
    <p>
      Map : 
      44260 Savenay, France
    </p>
  </div>
</div>
`;

exports[`DragImage test suite renders component with a photo 1`] = `
<div
  className="dragImage-active"
  id="dragImage"
>
  <div>
    <p>
      Image : 
      artificial-background-blue-1282170
    </p>
  </div>
</div>
`;

exports[`DragImage test suite renders component with a text_content 1`] = `
<div
  className="dragImage-active"
  id="dragImage"
>
  <div>
    <p>
      Text content is not empty
    </p>
  </div>
</div>
`;
